src/containers/ProfilePage/ProfilePage.module.css
@import '../../styles/customMediaQueries.css';

.error {
  margin-top: 5px;

  @media (--viewportMedium) {
    margin-top: 4px;
  }
  @media (--viewportLarge) {
    margin-top: 3px;
  }
}

.error {
  color: var(--colorFail);
}

.aside {
  box-shadow: none;
}

.asideContent {
  width: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  border-bottom: 1px solid var(--colorGrey100);

  @media (--viewportLarge) {
    flex-direction: column;
    border-bottom: none;
  }
}

.avatar {
  margin: 30px 26px 29px 0;
  flex-shrink: 0;

  @media (--viewportLarge) {
    margin: 0 96px 48px 0;
  }
}

.mobileHeading {
  flex-shrink: 0;
  margin: 60px 0 0 0;

  @media (--viewportMedium) {
    margin: 49px 0 0 0;
  }
  @media (--viewportLarge) {
    display: none;
  }
}

.editLinkMobile {
  margin-top: 17px;

  /* Pull the link to the end of the container */
  margin-left: auto;

  @media (--viewportMedium) {
    margin-top: 20px;
  }
  @media (--viewportLarge) {
    display: none;
  }
}

.editLinkDesktop {
  display: none;

  @media (--viewportLarge) {
    display: inline;
    padding: 6px 0 2px 0;
  }
}

.desktopHeading {
  display: none;

  @media (--viewportLarge) {
    display: block;
    margin: 0 0 24px 0;
  }
}

.longWord {
  word-break: break-word;
  hyphens: auto;
}

.bio {
  /* Preserve newlines, but collapse other whitespace */
  white-space: pre-line;
  margin: 5px 0 24px 0;

  @media (--viewportMedium) {
    margin: 4px 0 51px 0;
  }
  @media (--viewportLarge) {
    margin: 0 0 56px 0;
    max-width: 600px;
  }
}

.mobileReviewsTitle {
  margin: 24px 0 26px 0;
}

.mobileReviews {
  border-top: 1px solid var(--colorGrey100);
  margin-bottom: 36px;
}

.desktopReviews {
  border-top: 1px solid var(--colorGrey100);

  @media (--viewportMedium) {
    margin-bottom: 48px;
  }

  @media (--viewportLarge) {
    margin-bottom: 0;
  }
}

.desktopReviewsWrapper {
  max-width: 600px;
  margin-top: 28px;
}

.desktopReviewsTitle {
  composes: textLarge from global;
  margin-bottom: 0;
}

.desktopReviewsTabNav {
  margin-bottom: 32px;
}

.sectionText {
  padding: 0 24px;
  margin-bottom: 30px;

  @media (--viewportMedium) {
    padding: 0;
    margin-bottom: 40px;
  }
}

/*
 * Custom field component classes
 */

.sectionHeading {
  /* Font for sections titles */
  composes: p from global;
  padding: 0;
  font-weight: var(--fontWeightBold);

  margin-top: 0;
  margin-bottom: 12px;

  @media (--viewportMedium) {
    margin-top: 0;
    margin-bottom: 8px;
  }
}

.text {
  font-weight: var(--fontWeightRegular);
  padding: 1px 0 5px 0;
  margin: 0;

  /* Preserve newlines, but collapse other whitespace */
  white-space: pre-line;

  @media (--viewportMedium) {
    padding: 3px 0 5px 0;
    margin: 0;
  }
}

.ingress {
  composes: p from global;
  margin: 0;

  /* Preserve newlines, but collapse other whitespace */
  white-space: pre-line;

  @media (--viewportMedium) {
    margin: 0;
  }
}

.sectionMultiEnum,
.sectionDetails,
.sectionEmbeddedYoutubeVideo {
  padding: 0 24px;
  margin-bottom: 30px;

  @media (--viewportMedium) {
    padding: 0;
    margin-bottom: 40px;
  }
}

.details {
  padding-bottom: 1px;
  margin: 0;
}

.detailsRow {
  display: inline-flex;
  justify-content: space-between;
  width: 100%;
  padding: 1px 0 4px 0;
  line-height: 36px;
  list-style: none;
  font-weight: var(--fontWeightRegular);

  &:not(:last-child) {
    border-bottom: 1px solid var(--colorGrey100);
  }

  @media (--viewportMedium) {
    padding: 5px 0 2px 0;
    line-height: 32px;
  }
}

.detailLabel {
  font-weight: var(--fontWeightSemiBold);
  letter-spacing: -0.09px;
}

.video {
  position: relative;
  overflow: hidden;
  border-radius: 8px;
}
.iframe {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

/* SELLER STYLES */
.profileInfoWrapper {
  display: flex;
  justify-content: space-between;
  gap: 36px;
  margin-bottom: 48px;
  flex-wrap: wrap;

  @media (--viewportLarge) {
    flex-wrap: nowrap;
  }
}

.profileInfoAvatar {
  display: flex;
  gap: 24px;

  @media (--viewportLarge) {
    display: block;
  }
}

.profileInfoContent {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  flex: 1 1 auto;
}

.profileInfoActions {
  display: flex;
  flex-direction: column;
}

.profileInfoActionsDesktop {
  flex: 0 0 auto;
  display: none;

  @media (--viewportLarge) {
    display: flex;
    flex-direction: column;
  }
}

.favoriteButton {
  color: var(--marketplaceColor);
}

.sellerHeading {
  margin-right: 16px;
}

.desktopSellerHeading {
  composes: sellerHeading;
  display: none;

  @media (--viewportLarge) {
    display: inline;
  }
}

.mobileSellerHeading {
  display: inline;

  @media (--viewportLarge) {
    display: none;
  }
}

.pronounsLabel {
  font-size: 13px;
  font-weight: 400;
}

.creativeSpecialtyLabel {
  text-transform: uppercase;
  font-size: 16px;
  font-weight: 600;
  margin: 0;
}

.addressLabel {
  text-transform: uppercase;
  font-family: 'SilkaMono';
  font-size: 13px;
  font-weight: 600;
  margin: 0;
}

.bioLabel {
  font-size: 16px;
  font-weight: 400;
  margin: 0;
  /* Preserve newlines, but collapse other whitespace */
  white-space: pre-line;
}

.portfolioLink {
  composes: bioLabel;

  justify-content: flex-start;
  padding-left: 0;
  padding-right: 0;
}

.singleTabLayout {
  margin-bottom: 36px;

  /* Maps max-width value */
  @media (--viewportLarge) {
    max-width: 640px;
  }
}

.actionsContainer {
  flex-direction: column;
  align-items: baseline;
  display: flex;
  gap: 12px;

  @media (--viewportMedium) {
    flex-direction: row;
    align-items: center;
  }
}

.actionButton {
  font-size: 14px;
  padding: 20px;
  text-transform: uppercase;
}

